--- a/Proyecto_Final.ipynb
+++ b/Proyecto_Final.ipynb
@@ -29,18 +29,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 60,
    "id": "a06f1774",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "from pathlib import Path\n",
     "import pingouin as pg\n",
-    "import statsmodels.formula.api as smf\n",
     "from scipy import stats\n",
+    "import matplotlib.pyplot as plt\n",
+    "from __future__ import annotations   \n",
+    "from itertools import product  \n",
+    "import statsmodels.formula.api as smf\n",
+    "from statsmodels.stats.anova import anova_lm\n",
+    "from statsmodels.multivariate.manova import MANOVA\n",
+    "from scipy.stats import bootstrap\n",
     "from scipy.spatial import distance\n",
+    "from numpy.linalg import inv\n",
+    "from scipy.stats import chi2\n",
     "from normalizato_utile import *"
    ]
   },
@@ -81,6 +89,14 @@
     "print(df[\"LocationDesc\"].unique())\n",
     "print(len(df))\n",
     "columns_interes = [\"Data_Value\",\"Age\",\"MMSE\",\"ADL\",\"CholesterolLDL\",\"FunctionalAssessment\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c980f22",
+   "metadata": {},
+   "source": [
+    "#### Histogramas"
    ]
   },
   {
@@ -155,6 +171,14 @@
     "for col in columns_interes:\n",
     "  #df[col].hist(bins=round(np.sqrt(len(df)))); plt.title(col); plt.show()\n",
     "  df[col].hist(bins=40); plt.title(col); plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9155c3fe",
+   "metadata": {},
+   "source": [
+    "#### Normalizado"
    ]
   },
   {
@@ -270,6 +294,14 @@
     "# 5) Graficar una columna antes/después\n",
     "plot_hist(df[\"col1\"], \"Before: col1\")\n",
     "plot_hist(df_t[\"col1\"], \"After (Box-Cox + z-score): col1\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d9d963e8",
+   "metadata": {},
+   "source": [
+    "#### Scatter Plots"
    ]
   },
   {
@@ -500,9 +532,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "20314b71",
+   "metadata": {},
+   "source": [
+    "## MANOVA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "b7091b47",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "MemoryError",
+     "evalue": "Unable to allocate 77.1 GiB for an array with shape (1439, 7194852) and data type float64",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mMemoryError\u001b[39m                               Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[61]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m formula = \u001b[33m\"\u001b[39m\u001b[33mData_Value + CholesterolLDL  ~ C(Age) * C(MMSE)* C(LocationDesc)* C(Gender)\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m manova = \u001b[43mMANOVA\u001b[49m\u001b[43m.\u001b[49m\u001b[43mfrom_formula\u001b[49m\u001b[43m(\u001b[49m\u001b[43mformula\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdata\u001b[49m\u001b[43m=\u001b[49m\u001b[43mdf\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      3\u001b[39m mv_out = manova.mv_test()\n\u001b[32m      4\u001b[39m \u001b[38;5;28mprint\u001b[39m(mv_out) \n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\user\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\statsmodels\\base\\model.py:203\u001b[39m, in \u001b[36mModel.from_formula\u001b[39m\u001b[34m(cls, formula, data, subset, drop_cols, *args, **kwargs)\u001b[39m\n\u001b[32m    200\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m missing == \u001b[33m'\u001b[39m\u001b[33mnone\u001b[39m\u001b[33m'\u001b[39m:  \u001b[38;5;66;03m# with patsy it's drop or raise. let's raise.\u001b[39;00m\n\u001b[32m    201\u001b[39m     missing = \u001b[33m'\u001b[39m\u001b[33mraise\u001b[39m\u001b[33m'\u001b[39m\n\u001b[32m--> \u001b[39m\u001b[32m203\u001b[39m tmp = \u001b[43mhandle_formula_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mformula\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdepth\u001b[49m\u001b[43m=\u001b[49m\u001b[43meval_env\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    204\u001b[39m \u001b[43m                          \u001b[49m\u001b[43mmissing\u001b[49m\u001b[43m=\u001b[49m\u001b[43mmissing\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    205\u001b[39m ((endog, exog), missing_idx, design_info) = tmp\n\u001b[32m    206\u001b[39m max_endog = \u001b[38;5;28mcls\u001b[39m._formula_max_endog\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\user\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\statsmodels\\formula\\formulatools.py:63\u001b[39m, in \u001b[36mhandle_formula_data\u001b[39m\u001b[34m(Y, X, formula, depth, missing)\u001b[39m\n\u001b[32m     61\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m     62\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m data_util._is_using_pandas(Y, \u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[32m---> \u001b[39m\u001b[32m63\u001b[39m         result = \u001b[43mdmatrices\u001b[49m\u001b[43m(\u001b[49m\u001b[43mformula\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mY\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdepth\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mreturn_type\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mdataframe\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m     64\u001b[39m \u001b[43m                           \u001b[49m\u001b[43mNA_action\u001b[49m\u001b[43m=\u001b[49m\u001b[43mna_action\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     65\u001b[39m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m     66\u001b[39m         result = dmatrices(formula, Y, depth, return_type=\u001b[33m'\u001b[39m\u001b[33mdataframe\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m     67\u001b[39m                            NA_action=na_action)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\user\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\patsy\\highlevel.py:319\u001b[39m, in \u001b[36mdmatrices\u001b[39m\u001b[34m(formula_like, data, eval_env, NA_action, return_type)\u001b[39m\n\u001b[32m    309\u001b[39m \u001b[38;5;250m\u001b[39m\u001b[33;03m\"\"\"Construct two design matrices given a formula_like and data.\u001b[39;00m\n\u001b[32m    310\u001b[39m \n\u001b[32m    311\u001b[39m \u001b[33;03mThis function is identical to :func:`dmatrix`, except that it requires\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m    316\u001b[39m \u001b[33;03mSee :func:`dmatrix` for details.\u001b[39;00m\n\u001b[32m    317\u001b[39m \u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m    318\u001b[39m eval_env = EvalEnvironment.capture(eval_env, reference=\u001b[32m1\u001b[39m)\n\u001b[32m--> \u001b[39m\u001b[32m319\u001b[39m (lhs, rhs) = \u001b[43m_do_highlevel_design\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    320\u001b[39m \u001b[43m    \u001b[49m\u001b[43mformula_like\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43meval_env\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mNA_action\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mreturn_type\u001b[49m\n\u001b[32m    321\u001b[39m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    322\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m lhs.shape[\u001b[32m1\u001b[39m] == \u001b[32m0\u001b[39m:\n\u001b[32m    323\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m PatsyError(\u001b[33m\"\u001b[39m\u001b[33mmodel is missing required outcome variables\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\user\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\patsy\\highlevel.py:168\u001b[39m, in \u001b[36m_do_highlevel_design\u001b[39m\u001b[34m(formula_like, data, eval_env, NA_action, return_type)\u001b[39m\n\u001b[32m    164\u001b[39m design_infos = _try_incr_builders(\n\u001b[32m    165\u001b[39m     formula_like, data_iter_maker, eval_env, NA_action\n\u001b[32m    166\u001b[39m )\n\u001b[32m    167\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m design_infos \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m168\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mbuild_design_matrices\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    169\u001b[39m \u001b[43m        \u001b[49m\u001b[43mdesign_infos\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mNA_action\u001b[49m\u001b[43m=\u001b[49m\u001b[43mNA_action\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mreturn_type\u001b[49m\u001b[43m=\u001b[49m\u001b[43mreturn_type\u001b[49m\n\u001b[32m    170\u001b[39m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    171\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m    172\u001b[39m     \u001b[38;5;66;03m# No builders, but maybe we can still get matrices\u001b[39;00m\n\u001b[32m    173\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(formula_like, \u001b[38;5;28mtuple\u001b[39m):\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\user\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\patsy\\build.py:995\u001b[39m, in \u001b[36mbuild_design_matrices\u001b[39m\u001b[34m(design_infos, data, NA_action, return_type, dtype)\u001b[39m\n\u001b[32m    993\u001b[39m results = []\n\u001b[32m    994\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m design_info \u001b[38;5;129;01min\u001b[39;00m design_infos:\n\u001b[32m--> \u001b[39m\u001b[32m995\u001b[39m     results.append(\u001b[43m_build_design_matrix\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdesign_info\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfactor_info_to_values\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[32m    996\u001b[39m matrices = []\n\u001b[32m    997\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m need_reshape, matrix \u001b[38;5;129;01min\u001b[39;00m results:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\user\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\patsy\\build.py:822\u001b[39m, in \u001b[36m_build_design_matrix\u001b[39m\u001b[34m(design_info, factor_info_to_values, dtype)\u001b[39m\n\u001b[32m    820\u001b[39m     need_reshape = \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[32m    821\u001b[39m shape = (num_rows, \u001b[38;5;28mlen\u001b[39m(design_info.column_names))\n\u001b[32m--> \u001b[39m\u001b[32m822\u001b[39m m = DesignMatrix(\u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mempty\u001b[49m\u001b[43m(\u001b[49m\u001b[43mshape\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m=\u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m)\u001b[49m, design_info)\n\u001b[32m    823\u001b[39m start_column = \u001b[32m0\u001b[39m\n\u001b[32m    824\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m term, subterms \u001b[38;5;129;01min\u001b[39;00m design_info.term_codings.items():\n",
+      "\u001b[31mMemoryError\u001b[39m: Unable to allocate 77.1 GiB for an array with shape (1439, 7194852) and data type float64"
+     ]
+    }
+   ],
+   "source": [
+    "formula = \"Data_Value + CholesterolLDL  ~ C(Age) * C(MMSE)* C(LocationDesc)* C(Gender)\"\n",
+    "manova = MANOVA.from_formula(formula, data=df)\n",
+    "mv_out = manova.mv_test()\n",
+    "print(mv_out) "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7091b47",
+   "id": "91c8910a",
    "metadata": {},
    "outputs": [],
    "source": []
