--- a/Proyecto_Final.ipynb
+++ b/Proyecto_Final.ipynb
@@ -221,7 +221,7 @@
    ],
    "source": [
     "df=pd.read_csv(\"Datos_G2.csv\")\n",
-    "#df = df.dropna()\n",
+    "#df = df.dropna() -> si hacemos dropna, perdemos demasiados datos (quedamos solo con 1400 filas aprox)\n",
     "print(df[\"LocationDesc\"].unique())\n",
     "print(len(df))\n"
    ]
