--- a/Martin.ipynb
+++ b/Martin.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "a06f1774",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "948ade63",
    "metadata": {},
    "outputs": [
@@ -81,7 +81,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_10628\\275944412.py:8: FutureWarning: ChainedAssignmentError: behaviour will change in pandas 3.0!\n",
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_27180\\275944412.py:8: FutureWarning: ChainedAssignmentError: behaviour will change in pandas 3.0!\n",
       "You are setting values through chained assignment. Currently this works in certain cases, but when using Copy-on-Write (which will become the default behaviour in pandas 3.0) this will never work to update the original DataFrame or Series, because the intermediate object on which we are setting values will behave as a copy.\n",
       "A typical example is when you are setting values in a column of a DataFrame, like:\n",
       "\n",
@@ -92,14 +92,14 @@
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "\n",
       "  df[\"Age\"][pos] = \"70-79\"\n",
-      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_10628\\275944412.py:8: SettingWithCopyWarning: \n",
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_27180\\275944412.py:8: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df[\"Age\"][pos] = \"70-79\"\n",
-      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_10628\\275944412.py:8: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '70-79' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_27180\\275944412.py:8: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '70-79' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
       "  df[\"Age\"][pos] = \"70-79\"\n",
-      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_10628\\275944412.py:22: FutureWarning: ChainedAssignmentError: behaviour will change in pandas 3.0!\n",
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_27180\\275944412.py:22: FutureWarning: ChainedAssignmentError: behaviour will change in pandas 3.0!\n",
       "You are setting values through chained assignment. Currently this works in certain cases, but when using Copy-on-Write (which will become the default behaviour in pandas 3.0) this will never work to update the original DataFrame or Series, because the intermediate object on which we are setting values will behave as a copy.\n",
       "A typical example is when you are setting values in a column of a DataFrame, like:\n",
       "\n",
@@ -110,12 +110,12 @@
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "\n",
       "  df[\"MMSE\"][pos] = \"Deterioro leve\"\n",
-      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_10628\\275944412.py:22: SettingWithCopyWarning: \n",
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_27180\\275944412.py:22: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df[\"MMSE\"][pos] = \"Deterioro leve\"\n",
-      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_10628\\275944412.py:22: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value 'Deterioro leve' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_27180\\275944412.py:22: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value 'Deterioro leve' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
       "  df[\"MMSE\"][pos] = \"Deterioro leve\"\n"
      ]
     },
@@ -1543,6 +1543,187 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "470ba23e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "75e21309",
+   "metadata": {},
+   "source": [
+    "## Bootstrap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d0362f2a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>YearStudy</th>\n",
+       "      <th>LocationDesc</th>\n",
+       "      <th>Data_Value</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>FamilyHistoryAlzheimers</th>\n",
+       "      <th>Depression</th>\n",
+       "      <th>HeadInjury</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>MMSE</th>\n",
+       "      <th>FunctionalAssessment</th>\n",
+       "      <th>MemoryComplaints</th>\n",
+       "      <th>BehavioralProblems</th>\n",
+       "      <th>ADL</th>\n",
+       "      <th>CholesterolLDL</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>West</td>\n",
+       "      <td>38.1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>70-79</td>\n",
+       "      <td>Deterioro leve</td>\n",
+       "      <td>6.518877</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.725883</td>\n",
+       "      <td>56.150897</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>Northeast</td>\n",
+       "      <td>19.5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>80-90</td>\n",
+       "      <td>Deterioro leve</td>\n",
+       "      <td>7.118696</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.592424</td>\n",
+       "      <td>193.407995</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>Midwest</td>\n",
+       "      <td>16.8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>70-79</td>\n",
+       "      <td>Deterioro moderado</td>\n",
+       "      <td>5.895077</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7.119548</td>\n",
+       "      <td>153.322762</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>West</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>70-79</td>\n",
+       "      <td>Deterioro leve</td>\n",
+       "      <td>8.965106</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6.481226</td>\n",
+       "      <td>65.366637</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>Midwest</td>\n",
+       "      <td>40.2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>80-90</td>\n",
+       "      <td>Deterioro leve</td>\n",
+       "      <td>6.045039</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.014691</td>\n",
+       "      <td>92.869700</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   YearStudy LocationDesc  Data_Value  Gender  FamilyHistoryAlzheimers  \\\n",
+       "0       2021         West        38.1       0                        0   \n",
+       "1       2021    Northeast        19.5       0                        0   \n",
+       "2       2021      Midwest        16.8       0                        1   \n",
+       "3       2021         West         4.9       1                        0   \n",
+       "4       2021      Midwest        40.2       0                        0   \n",
+       "\n",
+       "   Depression  HeadInjury    Age                MMSE  FunctionalAssessment  \\\n",
+       "0           1           0  70-79      Deterioro leve              6.518877   \n",
+       "1           0           0  80-90      Deterioro leve              7.118696   \n",
+       "2           0           0  70-79  Deterioro moderado              5.895077   \n",
+       "3           0           0  70-79      Deterioro leve              8.965106   \n",
+       "4           0           0  80-90      Deterioro leve              6.045039   \n",
+       "\n",
+       "   MemoryComplaints  BehavioralProblems       ADL  CholesterolLDL  \n",
+       "0                 0                   0  1.725883       56.150897  \n",
+       "1                 0                   0  2.592424      193.407995  \n",
+       "2                 0                   0  7.119548      153.322762  \n",
+       "3                 0                   1  6.481226       65.366637  \n",
+       "4                 0                   0  0.014691       92.869700  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ecb1b6a9",
    "metadata": {},
    "outputs": [],
    "source": []
